@@ -5,11 +5,15 @@ i preremove
 d none man 0755 root sys 
 d none man/man1 0755 root sys
 f none man/man1/scp.1 0644 root sys
+f none man/man1/sftp.1 0644 root sys
 f none man/man1/ssh-add.1 0644 root sys
 f none man/man1/ssh-agent.1 0644 root sys
 f none man/man1/ssh-keygen.1 0644 root sys
+f none man/man1/ssh-keyscan.1 0644 root sys
 f none man/man1/ssh.1 0644 root sys
+s none man/man1/slogin.1=ssh.1 
 d none man/man8 0755 root sys
+f none man/man8/sftp-server.8 0644 root sys
 f none man/man8/sshd.8 0644 root sys
 d none etc 0755 root sys
 f none etc/sshd_config.default 0644 root sys
@@ -20,8 +24,13 @@ f none etc/sshd-initscript 0755 root sys
 d none bin 0755 root sys
 f none bin/ssh-keygen 0755 root sys
 f none bin/ssh 0755 root sys
+s none bin/slogin=ssh 0755 root sys 
 f none bin/ssh-add 0755 root sys
 f none bin/ssh-agent 0755 root sys
+f none bin/ssh-keyscan 0755 root sys
 f none bin/scp 0755 root sys
+f none bin/sftp 0755 root sys
+d none libexec 0755 root sys
+f none libexec/sftp-server 0755 root sys
 d none sbin 0755 root sys
 f none sbin/sshd 0755 root sys
