@@ -3,6 +3,8 @@
    - markus@cvs.openbsd.org 2001/05/11 14:59:56
      [clientloop.c misc.c misc.h]
      add unset_nonblock for stdout/err flushing in client_loop().
+ - (bal) Patch to partial sync up contrib/solaris/ packaging software.
+   Patch by pete <ninjaz@webexpress.com>
 
 20010511
  - OpenBSD CVS Sync
